[package]
name = "socketoxide_tick_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
axum = "0.7.4"
socketioxide = "0.11.0"
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.80"
